--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -24,6 +24,7 @@
   <link rel="import" href="{% static "bower_components/core-toolbar/core-toolbar.html" %}">
   <link rel="import" href="{% static "bower_components/font-roboto/roboto.html" %}">
   <link rel="import" href="{% static "bower_components/paper-button/paper-button.html" %}">
+  <link rel="import" href="{% static "bower_components/paper-input/paper-input.html" %}">
   <link rel="import" href="{% static "bower_components/paper-checkbox/paper-checkbox.html" %}">
   <link rel="import" href="{% static "bower_components/paper-icon-button/paper-icon-button.html" %}">
   <link rel="import" href="{% static "bower_components/paper-fab/paper-fab.html" %}">
@@ -78,9 +79,11 @@
 
   <section>
     <paper-dialog transition="paper-dialog-transition-bottom" id="add-dialog" heading='Add Task'>
-          <p>Great! Let's collect some information.</p>
-          <input type="text" id="name" placeholder="Name..."/>
-          <input type="text" id="description" placeholder="Description..."/>
+          <h3>Great! Let's collect some information.</h3>
+          <br/>
+          <paper-input floatingLabel=true type="text" id="name" label="Name..."></paper-input>
+          <br/>
+          <paper-input style="height: 150px;" multiline layout vertical floatingLabel=true rows="4" id="description" label="Description..."></paper-input>
           <paper-button affirmative>Decline</paper-button>
           <paper-button affirmative autofocus ng-click="addItem()">Accept</paper-button>
     </paper-dialog>
