Show a welcome message if no tasks are present.

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -55,6 +55,7 @@
     <br/>
     <br/>
     <br/>
+    <h2 style="text-align: center;" ng-show="items.length == 0">You're all clear! Press the + button to start.</h2>
     <div id="item-view" ng-repeat="item in items">
       <md-card id="item-card" style="margin-left: auto; margin-right: auto;">
         <div id="item-content" style="text-align: center;">
