--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -57,10 +57,9 @@
     <br/>
     <h2 style="text-align: center;" ng-show="items.length == 0">You're all clear! Press the + button to start.</h2>
     <div id="item-view" ng-repeat="item in items">
-      <md-card id="item-card" style="margin-left: auto; margin-right: auto;">
+      <md-card id="item-card" style="margin-left: auto; margin-right: auto;" ng-class='{completedcard:item.fields.completed}'>
         <div id="item-content" style="text-align: center;">
           <h4 ng-class='{complete:item.fields.completed}'>{{ item.fields.name }}</h4>
-          <br/>
           <p ng-class='{complete:item.fields.completed}'>{{ item.fields.description }}</p>
           <br/>
           <paper-checkbox ng-click="toggleCompleted(item.fields.completed, this)" label="Completed?" complete-check></paper-checkbox>
