Hmm.. We'll see how this sizing works.

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -69,13 +69,13 @@
           <br/>
         </div>
       </md-card>
-      <script>
-        if(window.innerWidth < 400) {
-          $("#item-card").css({width: window.innerWidth - 30});
-        } else {
-          $("#item-card").css({width: 800});
-        }
-      </script>
+      <!-- // <script>
+      //   if(window.innerWidth < 400) {
+      //     $("#item-card").css({width: window.innerWidth - 30});
+      //   } else {
+      //     $("#item-card").css({width: 800});
+      //   }
+      // </script> -->
     </div>
   </section>
 
