--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -58,6 +58,7 @@
     <h2 style="text-align: center;" ng-show="items.length == 0">You're all clear! Press the + button to start.</h2>
     <div id="item-view" ng-repeat="item in items">
       <md-card id="item-card" style="margin-left: auto; margin-right: auto;" ng-class='{completedcard:item.fields.completed}'>
+        <div id="item-id" style="text-align: left; color: grey;">#{{ item.pk }}</div>
         <div id="item-content" style="text-align: center;">
           <h4 ng-class='{complete:item.fields.completed}'>{{ item.fields.name }}</h4>
           <p ng-class='{complete:item.fields.completed}'>{{ item.fields.description }}</p>
