--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <!doctype html>
 
-<html ng-app="myApp">
+<html ng-app="myApp" manifest="static/justdoit.appcache">
 <head>
   <title>JustDoIt!</title>
 
