--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,4 +1,8 @@
+html {
 
+    background-color: #607d8b;
+
+}
 body {
   font-family: RobotoDraft, sans-serif;
   color: #333;
@@ -8,13 +12,26 @@ body {
   -ms-user-select: none;
   user-select: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  -webkit-touch-callout: none;
   background-color: #607d8b
+  -webkit-touch-callout: none;
+}
+
+#page-body {
+    background-color: #607d8b
 }
 
 md-card {
-  background-color: #FFFFFF;
   width: 800px;
+  background-color: #FFFFFF;
+}
+
+#item-card {
+}
+
+#demo-card {
+    background-color: #fff176;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 section {
