--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -20,6 +20,7 @@
 
   <script src="{% static "js/controllers.js" %}"></script>
 
+  <link rel="shortcut icon" href="{% static "favicon.png" %}">
   <link rel="import" href="{% static "bower_components/core-icons/core-icons.html" %}">
   <link rel="import" href="{% static "bower_components/core-toolbar/core-toolbar.html" %}">
   <link rel="import" href="{% static "bower_components/font-roboto/roboto.html" %}">
@@ -94,6 +95,7 @@
 
   <paper-toast id='update-toast' text='Task Updated Successfully.'></paper-toast>
   <paper-toast id='removal-toast' text='Task Removed Successfully.'></paper-toast>
+  <paper-toast style="color: #c41411;" id='failure-toast' text='ERROR: Task could not be added!'></paper-toast>
 </body>
 {% endverbatim %}
 <script type="text/javascript" src="{% static "js/scripts.js" %}"></script>
