--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -32,6 +32,8 @@
   <link rel="import" href="{% static "bower_components/paper-tabs/paper-tabs.html" %}">
   <link rel="import" href="{% static "bower_components/paper-toast/paper-toast.html" %}">
   <link rel="import" href="{% static "bower_components/paper-dialog/paper-dialog.html" %}">
+  <link rel="import" href="{% static "bower_components/paper-item/paper-item.html" %}">
+  <link rel="import" href="{% static "bower_components/paper-dropdown-menu/paper-dropdown-menu.html" %}">
 
   <script src="{% static "bower_components/angular/angular.js" %}"></script>
 	<script src="{% static "bower_components/angular-aria/angular-aria.js" %}"></script>
@@ -58,7 +60,7 @@
     <br/>
     <h2 style="text-align: center;" ng-show="items.length == 0">You're all clear! Press the + button to start.</h2>
     <div id="item-view" ng-repeat="item in items">
-      <md-card id="item-card" style="margin-left: auto; margin-right: auto;" ng-class='{completedcard:item.fields.completed}'>
+      <md-card id="item-card" style="margin-left: auto; margin-right: auto;" ng-class="{completedcard:item.fields.completed, 'task-red': item.fields.color=='red', 'task-blue': item.fields.color=='blue', 'task-green': item.fields.color=='green'}">
         <div id="item-id" style="text-align: left; color: grey;">#{{ item.pk }}</div>
         <div id="item-content" style="text-align: center;">
           <h4 ng-class='{complete:item.fields.completed}'>{{ item.fields.name }}</h4>
@@ -88,7 +90,13 @@
           <paper-input floatingLabel=true type="text" id="name" label="Name..."></paper-input>
           <br/>
           <paper-input style="height: 150px;" multiline layout vertical floatingLabel=true rows="4" id="description" label="Description..."></paper-input>
-          <paper-button affirmative>Decline</paper-button>
+          <paper-dropdown-menu id="colorchoice" selected="Default" valueattr="label">
+          <paper-item label="Default"></paper-item>
+          <paper-item label="red"></paper-item>
+          <paper-item label="green"></paper-item>
+          <paper-item label="blue"></paper-item>
+          </paper-dropdown-menu> 
+          <paper-button affirmative onclick="this.toggle()">Decline</paper-button>
           <paper-button affirmative autofocus ng-click="addItem()">Accept</paper-button>
     </paper-dialog>
   </section>
