Fixed the description field in the demo app.

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -90,7 +90,7 @@
           <paper-input floatingLabel=true type="text" id="name" label="Name..."></paper-input>
           <br/>
           <paper-input style="height: 150px;" multiline layout vertical floatingLabel=true rows="4" id="description" label="Description..."></paper-input>
-          <paper-dropdown-menu id="colorchoice" selected="Default" valueattr="label">
+          <paper-dropdown-menu label="Card Color:" id="colorchoice" selected="Default" valueattr="label">
           <paper-item label="Default"></paper-item>
           <paper-item label="red"></paper-item>
           <paper-item label="green"></paper-item>
