Gave demo cards meaning! Also, fixed adding demo items.

--- a/templates/app/demo.html
+++ b/templates/app/demo.html
@@ -16,7 +16,7 @@
   <script src="{% static "bower_components/platform/platform.js" %}"></script>
 
   <script src="{% static "js/jquery.cookie.js" %}"></script>
-  <script src="{% static "js/AuthLib.js" %}"></script>
+  <!--<script src="{% static "js/AuthLib.js" %}"></script>-->
 
   <script src="{% static "js/controllers-demo.js" %}"></script>
 
@@ -48,7 +48,7 @@
   <core-toolbar id="toolbar">
     <!--<paper-icon-button icon="menu"></paper-icon-button>-->
     <span flex>JustDoIt!</span>
-    <paper-fab icon="add" onclick="addItem()"></paper-fab>
+    <paper-fab icon="add" onclick="addDemoItem()"></paper-fab>
   </core-toolbar>
 
   <section>
