--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -48,19 +48,30 @@
 </head>
 {% verbatim %}
 <body id="page-body" unresolved ng-controller="HomeController">
-  <core-toolbar id="toolbar">
+  <core-toolbar id="toolbar" class="medium-tall">
     <!--<paper-icon-button icon="menu"></paper-icon-button>-->
     <span flex>JustDoIt!</span>
     <paper-fab icon="add" onclick="addItem()"></paper-fab>
+    <div class="bottom">
+        
+        <paper-tabs selected="0">
+            <paper-tab ng-click="sort('')">All</paper-tab>
+            <paper-tab ng-repeat="category in categories" ng-click="sort(category.name)" > {{ category.name }} </paper-tab>
+        </paper-tabs>
+    
+    </div>
   </core-toolbar>
 
   <section>
     <br/>
     <br/>
     <br/>
+    <br/>
+    <br/>
+    <br/>
     <h2 style="text-align: center;" ng-show="items.length == 0">You're all clear! Press the + button to start.</h2>
     <div id="item-view" ng-repeat="item in items">
-      <md-card id="item-card" style="margin-left: auto; margin-right: auto;" ng-class="{completedcard:item.fields.completed, 'task-red': item.fields.color=='red', 'task-blue': item.fields.color=='blue', 'task-green': item.fields.color=='green'}">
+      <md-card id="item-card" style="margin-left: auto; margin-right: auto;" ng-class="{completedcard:item.fields.completed, 'task-red': item.fields.color=='red', 'task-blue': item.fields.color=='blue', 'task-green': item.fields.color=='green'}" ng-hide="item.hidden == true">
         <div id="item-id" style="text-align: left; color: grey;">#{{ item.pk }}</div>
         <div id="item-content" style="text-align: center;">
           <h4 ng-class='{complete:item.fields.completed}'>{{ item.fields.name }}</h4>
@@ -89,8 +100,11 @@
           <br/>
           <paper-input floatingLabel=true type="text" id="name" label="Name..."></paper-input>
           <br/>
-          <paper-input style="height: 150px;" multiline layout vertical floatingLabel=true rows="4" id="description" label="Description..."></paper-input>
-          <paper-dropdown-menu label="Card Color:" id="colorchoice" selected="Default" valueattr="label">
+          <paper-input multiline layout vertical floatingLabel=true rows="4" id="description" label="Description..."></paper-input>
+          <br/>
+          <paper-input id="category" label="Category..." floatingLabel=true></paper-input>
+          <br/>
+          Card Color: &nbsp &nbsp  <paper-dropdown-menu label="Card Color:" id="colorchoice" selected="Default" valueattr="label">
           <paper-item label="Default"></paper-item>
           <paper-item label="red"></paper-item>
           <paper-item label="green"></paper-item>
