--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -56,7 +56,7 @@
         
         <paper-tabs selected="0">
             <paper-tab ng-click="sort('')">All</paper-tab>
-            <paper-tab ng-repeat="category in categories" ng-click="sort(category.name)" > {{ category.name }} </paper-tab>
+            <paper-tab ng-repeat="category in categories" class="category" ng-click="sort(category)" > {{ category }} </paper-tab>
         </paper-tabs>
     
     </div>
