--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -71,7 +71,7 @@
     <br/>
     <h2 style="text-align: center;" ng-show="items.length == 0">You're all clear! Press the + button to start.</h2>
     <div id="item-view" ng-repeat="item in items">
-      <md-card id="item-card" style="margin-left: auto; margin-right: auto;" ng-class="{completedcard:item.fields.completed, 'task-red': item.fields.color=='red', 'task-blue': item.fields.color=='blue', 'task-green': item.fields.color=='green'}" ng-hide="item.hidden == true">
+      <md-card id="item-card" style="margin-left: auto; margin-right: auto;" ng-class="getColorFromItem(item)" ng-hide="item.hidden == true">
       <div id="item-id" style="text-align: left; vertical-align: top; font-size: 14px; color: #424242;">#{{ item.pk }} <span>{{ item.fields.category }}</span></div>
       
         <div id="item-content" style="text-align: center;">
@@ -85,13 +85,6 @@
           <br/>
         </div>
       </md-card>
-      <!-- // <script>
-      //   if(window.innerWidth < 400) {
-      //     $("#item-card").css({width: window.innerWidth - 30});
-      //   } else {
-      //     $("#item-card").css({width: 800});
-      //   }
-      // </script> -->
     </div>
   </section>
 
