--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -5,10 +5,16 @@
 <head>
   <title>JustDoIt!</title>
 
+  <!-- Mobile meta stuff -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <!--<meta name="viewport" content="width=device-width; initial-scale = 1.0; maximum-scale=1.0; user-scalable=no" />-->
+
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <!-- Android 5.0+ / Mobile Chrome 39 features (Accent Color) -->
+
+  <meta name="theme-color" content="#607d8b">
+
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
