--- a/app/templates/app/tasks/tasks.html
+++ b/app/templates/app/tasks/tasks.html
@@ -10,7 +10,7 @@
 
     {% if tasks|length_is:0 %}
         <div class="alert alert-success">
-            <p class="text-success">No tasks found. You're all done!</p>
+            <p>No tasks found. You're all done!</p>
         </div>
     {% else %}
     <table class="table table-responsive">
